--- a/resource/localization/en/wr.properties
+++ b/resource/localization/en/wr.properties
@@ -1,3 +1,7 @@
-vwr.vwallrun=Vertical Wall Run
-vwr.SP_VManip_cuda=SinglePlayer-VManip-CUDA
-vwr.lifetime=Float Time
+wr.vwallrun=Vertical Wall Run
+wr.SP_VManip_cuda=SinglePlayer-VManip-CUDA
+wr.SP_VManip_YongLi=SinglePlayer-VManip-YongLi
+wr.lifetime=Float Time
+
+wr.hwallrun=Horizontal Wall Run
+wr._hmastlookatwall
