--- a/resource/localization/en/wr.properties
+++ b/resource/localization/en/wr.properties
@@ -1,7 +1,10 @@
-wr.vwallrun=Vertical Wall Run
 wr.SP_VManip_cuda=SinglePlayer-VManip-CUDA
 wr.SP_VManip_YongLi=SinglePlayer-VManip-YongLi
-wr.lifetime=Float Time
 
 wr.hwallrun=Horizontal Wall Run
-wr._hmastlookatwall
+wr.vwallrun=Vertical Wall Run
+
+wr.h_lifetime=Float Time
+wr.h_mustlookatwall=Must Look At Wall
+
+wr.v_lifetime=Float Time
