--- a/resource/localization/zh-CN/wr.properties
+++ b/resource/localization/zh-CN/wr.properties
@@ -8,3 +8,18 @@ wr.h_lifetime=悬浮时间
 wr.h_mustlookatwall=必须看向墙
 
 wr.v_lifetime=悬浮时间
+
+
+wr.v_gravity=重力
+wr.v_gravity.help=将会影响从跑->悬浮的时间
+
+wr.v_dietime=死亡次数
+wr.v_dietime.help=你可以在墙上跑很多次
+
+wr.v_diespeed=死亡速度
+wr.v_diespeed.help=下坠速度大于此值将不会触发
+
+wr.h_dietime=死亡次数
+wr.h_dietime.help=你可以在墙上跑很多次
+wr.h_diespeed=死亡速度
+wr.h_diespeed.help=下坠速度大于此值将不会触发
