--- a/resource/localization/en/wr.properties
+++ b/resource/localization/en/wr.properties
@@ -1,24 +1,20 @@
-wr.SP_VManip_cuda=SinglePlayer-VManip-CUDA
-wr.SP_VManip_YongLi=SinglePlayer-VManip-YongLi
-
-wr.hwallrun=Horizontal Wall Run
-wr.vwallrun=Vertical Wall Run
-
 wr.h_lifetime=Float Time
 wr.h_mustlookatwall=Must Look At Wall
-
 wr.v_lifetime=Float Time
-
 wr.v_gravity=gravity
 wr.v_gravity.help=Will affect the time from running to floating
-
 wr.v_dietime=number of deaths
 wr.v_dietime.help=Allows you to run on walls many times
-
 wr.v_diespeed=death speed
 wr.v_diespeed.help=Will not trigger if the fall speed is greater than this value
-
 wr.h_dietime=number of deaths
 wr.h_dietime.help=Allows you to run on walls many times
 wr.h_diespeed=death speed
 wr.h_diespeed.help=Will not trigger if the fall speed is greater than this value
+
+upgui.HWallRun=Horizontal WallRun
+upgui.VWallRun=Vertical WallRun
+upgui.jump=Jump
+upgui.clean=Clean
+upgui.roll=Roll
+upgui.offset=Offset
